--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-lg fixed-top bg-translucido outer-nav">
-        <a href="/index" class="navbar-brand">
+        <a href="/index.html" class="navbar-brand">
             <img class="img-fluid bar-logo" src="/assets/images/logo_branco-horizontal_mid.png" alt="Logo USPMUN">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar">
